# heyo-public

./: .gitignore  AGENTS.md  README.md  install.sh
.github/workflows/: build.yml
.printer/exec/: 011-observability-969386fd.json
.printer/followups/: 011-observability.md
.printer/tasks/: T-039.md  T-040.md  T-041.md  T-042.md  T-043.md  T-044.md  T-045.md  T-046.md
examples/fremont-fishing/: package-lock.json  package.json  tutorial.md
examples/fremont-fishing/src/: main.tsx  styles.css  types.ts
examples/fremont-fishing/src/data/: spots.ts
examples/sf-bay-fishing-chatbot/: index.html  package-lock.json  package.json  spec.md
examples/sf-bay-fishing-chatbot/src/: main.tsx  styles.css  types.ts
examples/sf-bay-fishing-chatbot/src/data/: spots.ts
heyosecret/: Cargo.toml  README.md
heyosecret/migrations/: 001_init.sql
heyosecret/src/: auth.rs  config.rs  crypto.rs  dashboard.rs  main.rs  models.rs  store.rs
heyosecret/src/assets/: dashboard.html
plugins/pi/: README.md  package.json
printer/src/: cli.rs  codegraph_watch.rs  drivers.rs  exec.rs  hooks.rs  init.rs  main.rs  metrics.rs  plan.rs  prompts.rs  review.rs  run.rs  session.rs  skills.rs  spec_from_followups.rs  specs_paths.rs  test.rs
printer/src/agent/: acp.rs  mod.rs
printer/src/plugins/: install.rs
printer/tests/: exec_e2e.rs
skills/: README.md  SKILLS.md
skills/git-submit/: SKILL.md
skills/heyvm/: SKILL.md
skills/heyvm-proxy/: SKILL.md
specs/: 001-improve-review.md  002-planning-stages.md  009-recursive-print.md  010-efficiency-pass.md  011-observability.md
