[package]
name = "heyosecret"
version = "0.1.0"
edition = "2021"
default-run = "heyosecret"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
subtle = "2.5"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[[bin]]
name = "heyosecret"
path = "src/main.rs"
